# cli-o

./: .dockerignore  .gitignore  ARCHITECTURE.md  Claude Clone - Project Summary.md  Claude Clone.md  DEPLOYMENT.md  Dockerfile  IDE_BRIDGE_PROTOCOL.md  IDE_BRIDGE_TEST.md  LICENSE  MANUS_PROMPT.md  Quick Start Guide.md  VSCODE_EXTENSION_PLAN.md  docker-compose.yml  install.sh  mimic  pyproject.toml  test-syntax.sh  test_basic.py  test_textarea_autocomplete.py
clio-vscode/: .vscodeignore  CHANGELOG.md  LICENSE  PROJECT_SUMMARY.md  README.md  TESTING.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
clio-vscode/src/: bridgeServer.ts  clioClient.ts  diffCodeLens.ts  diffDecorator.ts  diffProvider.ts  editApplier.ts  extension.ts  statusBar.ts
clio-vscode/src/webview/: chatPanel.html  chatPanel.ts
src/claude_clone/: __init__.py  __main__.py  cli.py
src/claude_clone/agent/: core.py  tools.py
src/claude_clone/commands/: router.py
src/claude_clone/context/: manager.py
src/claude_clone/providers/: base.py  openai_compatible.py
src/claude_clone/ui/: app.py  file_autocomplete.py  file_input.py
src/clio/: __init__.py  __main__.py  cli.py  ide_bridge.py  ide_integration.py  vscode_mode.py  vscode_protocol.py
src/clio/agent/: core.py  core.py.backup  core.py.bak2  core.py.minimal_backup  session_logger.py  tools.py
src/clio/history/: __init__.py  database.py
src/clio/providers/: __init__.py  openai_compatible.py
src/clio/ui/: app.py  command_autocomplete.py  file_autocomplete.py  textarea_autocomplete.py  thinking_indicator.py
tests/: benchmark_models.py  benchmark_results.json
