[project]
name = "claude-clone"
version = "0.1.0"
description = "Self-hosted AI coding assistant with dynamic model switching"
requires-python = ">=3.11"
authors = [
    {name = "Claude Clone Team"}
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "textual>=0.50",
    "textual-autocomplete>=2.0",
    "httpx>=0.27",
    "aiofiles>=23.0",
    "watchdog>=4.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "click>=8.1",
    "tiktoken>=0.7",
    "pathspec>=0.12",
    "openai>=1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "black", "ruff"]

[project.scripts]
claude-clone = "claude_clone.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
