[project]
name = "clio"
version = "0.1.0"
description = "CLIO - Command Line Interactive Operator - Self-hosted AI coding assistant"
requires-python = ">=3.11"
authors = [
    {name = "CLIO Team"}
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "textual>=0.50",
    "textual-autocomplete>=2.0",
    "httpx>=0.27",
    "aiofiles>=23.0",
    "watchdog>=4.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "click>=8.1",
    "tiktoken>=0.7",
    "pathspec>=0.12",
    "openai>=1.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "black", "ruff"]

[project.scripts]
clio = "clio.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/clio"]
